--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ body {
 /* header fixed */
 header {
   position: fixed;
-  top: 0;
+  top: 2px;
   z-index: 9999;
   overflow: hidden;
   background-color: white;
