Modify css for the banner reference to be all visible on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -378,7 +378,10 @@ shift the menu to the left. ALso change our image gallery to single column  */
     /* align with the page title  */
     margin-left: 20px;
   }
-
+  #banner-ref {
+    font-size: 80%;
+    bottom: 10rem;
+  }
   #image-gallery {
     margin: 0 auto;
     flex-wrap: nowrap;
